@@ -1,5 +1,12 @@
 2008-06-11  Jakub Jelinek  <jakub@redhat.com>
 
+	* libgomp.h (struct gomp_task): Add in_tied_task field.
+	* task.c (gomp_init_task): Initialize it.
+	(GOMP_task): Likewise.  Call gomp_team_barrier_set_task_pending
+	unconditionally.  Don't call gomp_team_barrier_wake if
+	current task is implicit or if(0) from implicit and number of
+	running tasks is equal to nthreads - 1.
+
 	PR libgomp/36471
 	* omp_lib.f90.in (omp_get_ancestor_thread_num_8,
 	omp_get_team_size_8): Fix pastos.
